@@ -20,15 +20,16 @@ package org.keycloak.quarkus.deployment;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -171,6 +172,7 @@ import org.hibernate.jpa.boot.spi.PersistenceUnitDescriptor;
 import org.hibernate.jpa.boot.spi.PersistenceXmlParser;
 import org.infinispan.protostream.SerializationContextInitializer;
 import org.jboss.jandex.AnnotationInstance;
+import org.jboss.jandex.AnnotationTarget;
 import org.jboss.jandex.AnnotationTransformation;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
@@ -333,6 +335,14 @@ class KeycloakProcessor {
                 .route(relativePath)
                 .handler(recorder.getManagementHandler())
                 .build());
+    }
+
+    @Record(ExecutionTime.STATIC_INIT)
+    @BuildStep
+    @Consume(ConfigBuildItem.class)
+    @Consume(CryptoProviderInitBuildItem.class) // ensures the Providers are loaded prior to handle the keystore #49359
+    void configureTruststore(KeycloakRecorder recorder) {
+        recorder.configureTruststore();
     }
 
     /**
@@ -509,38 +519,41 @@ class KeycloakProcessor {
             List<PersistenceXmlDescriptorBuildItem> descriptors,
             List<JdbcDataSourceBuildItem> jdbcDataSources,
             BuildProducer<AdditionalJpaModelBuildItem> additionalJpaModel,
+            CombinedIndexBuildItem indexBuildItem,
             BuildProducer<HibernateOrmIntegrationRuntimeConfiguredBuildItem> runtimeConfigured,
             KeycloakRecorder recorder) {
-        boolean defaultUnitFound = false;
+        ParsedPersistenceXmlDescriptor defaultUnitDescriptor = null;
+        List<String> userManagedEntities = new ArrayList<>();
 
         for (PersistenceXmlDescriptorBuildItem item : descriptors) {
-            if (!(item.getDescriptor() instanceof ParsedPersistenceXmlDescriptor descriptor)) {
-                continue;
-            }
+            ParsedPersistenceXmlDescriptor descriptor = (ParsedPersistenceXmlDescriptor) item.getDescriptor();
 
             if (DEFAULT_PERSISTENCE_UNIT.equals(descriptor.getName())) {
-                defaultUnitFound = true;
-                configureDefaultPersistenceUnitProperties(descriptor, config, getDefaultDataSource(jdbcDataSources));
-                runtimeConfigured.produce(new HibernateOrmIntegrationRuntimeConfiguredBuildItem("keycloak", descriptor.getName())
+                defaultUnitDescriptor = descriptor;
+                configureDefaultPersistenceUnitProperties(defaultUnitDescriptor, config, getDefaultDataSource(jdbcDataSources));
+                runtimeConfigured.produce(new HibernateOrmIntegrationRuntimeConfiguredBuildItem("keycloak", defaultUnitDescriptor.getName())
                         .setInitListener(recorder.createDefaultUnitListener()));
             } else {
                 String datasourceName = getDatasourceNameFromPersistenceXml(descriptor);
                 configurePersistenceUnitProperties(datasourceName, descriptor);
+                // register a listener for customizing the unit configuration at runtime
                 runtimeConfigured.produce(new HibernateOrmIntegrationRuntimeConfiguredBuildItem("keycloak", descriptor.getName())
                         .setInitListener(recorder.createUserDefinedUnitListener(datasourceName)));
+                userManagedEntities.addAll(descriptor.getManagedClassNames());
             }
         }
 
-        if (!defaultUnitFound) {
+        if (defaultUnitDescriptor == null) {
             throw new RuntimeException("No default persistence unit found.");
         }
+
+        configureDefaultPersistenceUnitEntities(defaultUnitDescriptor, indexBuildItem, userManagedEntities);
     }
 
     @BuildStep
     @Consume(CheckJdbcBuildStep.class)
     @Consume(CheckMultipleDatasourcesBuildStep.class)
-    void produceDefaultPersistenceUnit(CombinedIndexBuildItem indexBuildItem,
-            BuildProducer<PersistenceXmlDescriptorBuildItem> producer) {
+    void produceDefaultPersistenceUnit(BuildProducer<PersistenceXmlDescriptorBuildItem> producer) {
         PersistenceXmlParser parser = PersistenceXmlParser.create();
         PersistenceUnitDescriptor descriptor = parser.parse(Collections.singletonList(parser.getClassLoaderService().locateResource("default-persistence.xml")))
                 .values()
@@ -548,37 +561,7 @@ class KeycloakProcessor {
                 .findAny()
                 .orElseThrow(() -> new NoSuchElementException("Cannot find the file 'default-persistence.xml'"));
 
-        Set<String> userManagedEntities = collectUserManagedEntities(parser);
-
-        if (descriptor instanceof ParsedPersistenceXmlDescriptor parsedDescriptor) {
-            IndexView index = indexBuildItem.getIndex();
-            Collection<AnnotationInstance> annotations = index.getAnnotations(DotName.createSimple(Entity.class.getName()));
-            List<String> additionalEntities = new ArrayList<>();
-            for (AnnotationInstance annotation : annotations) {
-                String targetName = annotation.target().asClass().name().toString();
-                if (!userManagedEntities.contains(targetName)
-                        && (!targetName.startsWith("org.keycloak") || targetName.startsWith("org.keycloak.testsuite"))) {
-                    additionalEntities.add(targetName);
-                }
-            }
-            if (!additionalEntities.isEmpty()) {
-                parsedDescriptor.addClasses(additionalEntities);
-            }
-        }
-
         producer.produce(new PersistenceXmlDescriptorBuildItem(descriptor));
-    }
-
-    // Parsed independently because this step produces PersistenceXmlDescriptorBuildItem
-    // and therefore cannot consume List<PersistenceXmlDescriptorBuildItem> (circular dependency).
-    private static Set<String> collectUserManagedEntities(PersistenceXmlParser parser) {
-        Set<String> result = new HashSet<>();
-        for (URL url : parser.getClassLoaderService().locateResources("META-INF/persistence.xml")) {
-            for (PersistenceUnitDescriptor pu : PersistenceXmlParser.create().parse(Collections.singletonList(url)).values()) {
-                result.addAll(pu.getManagedClassNames());
-            }
-        }
-        return result;
     }
 
     static void configurePersistenceUnitProperties(String datasourceName, ParsedPersistenceXmlDescriptor descriptor) {
@@ -651,6 +634,22 @@ class KeycloakProcessor {
 
         getOptionalKcValue(DatabaseOptions.DB_SQL_LOG_SLOW_QUERIES.getKey())
                 .ifPresent(v -> unitProperties.put(AvailableSettings.LOG_SLOW_QUERY, v));
+    }
+
+    private void configureDefaultPersistenceUnitEntities(ParsedPersistenceXmlDescriptor descriptor, CombinedIndexBuildItem indexBuildItem,
+            List<String> userManagedEntities) {
+        IndexView index = indexBuildItem.getIndex();
+        Collection<AnnotationInstance> annotations = index.getAnnotations(DotName.createSimple(Entity.class.getName()));
+
+        for (AnnotationInstance annotation : annotations) {
+            AnnotationTarget target = annotation.target();
+            String targetName = target.asClass().name().toString();
+
+            if (!userManagedEntities.contains(targetName)
+                    && (!targetName.startsWith("org.keycloak") || targetName.startsWith("org.keycloak.testsuite"))) {
+                descriptor.addClasses(targetName);
+            }
+        }
     }
 
     /**
@@ -908,13 +907,7 @@ class KeycloakProcessor {
     @Produce(CryptoProviderInitBuildItem.class)
     @BuildStep
     @Record(ExecutionTime.STATIC_INIT)
-    void initCrypto(KeycloakRecorder recorder) {
-        FipsMode fipsMode = getFipsMode();
-        recorder.setCryptoProvider(fipsMode);
-        recorder.configureTruststore(fipsMode);
-    }
-
-    private FipsMode getFipsMode() {
+    void setCryptoProvider(KeycloakRecorder recorder) {
         FipsMode fipsMode = getOptionalValue(NS_KEYCLOAK_PREFIX + SecurityOptions.FIPS_MODE.getKey())
                 .map(FipsMode::valueOfOption)
                 .orElse(FipsMode.DISABLED);
@@ -924,7 +917,8 @@ class KeycloakProcessor {
         } else if (fipsMode.isFipsEnabled() && !Profile.isFeatureEnabled(Profile.Feature.FIPS)) {
             throw new RuntimeException("FIPS mode cannot be enabled without enabling the FIPS feature --features=fips");
         }
-        return fipsMode;
+
+        recorder.setCryptoProvider(fipsMode);
     }
 
     @BuildStep(onlyIf = IsDevelopment.class)
@@ -1042,9 +1036,15 @@ class KeycloakProcessor {
 
             configureScriptDescriptor(descriptor, fileName -> {
                 // descriptor is at META-INF/
+                Path basePath = Path.of(url.getPath()).getParent().getParent();
+
+                String path = basePath.resolve(fileName).toString();
+                if (!path.startsWith(url.getProtocol())) {
+                    path = url.getProtocol() + ":" + path;
+                }
                 try {
-                    return new URL(url, "../" + fileName).openStream();
-                } catch (IOException e) {
+                    return new URI(path).toURL().openStream();
+                } catch (IOException | URISyntaxException e) {
                     throw new RuntimeException("Failed to read script file from: " + fileName);
                 }
             });
